banner title changes/ contact re-alignment

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="banner" id="home">
             <div class="textBx">
                 <h2><spin>Hello, I'm</spin> <br><span>Oyakhilome Jesuseme.</span></h2>
-                <h3>I'm a Software Developer.</h3>
+                <h3> <span>I'm a Software Developer.</span></h3>
                 <a href="#about" class="btn">About Me</a>
             </div>
         </section>
